Add extra instructions to execute tracers in their README.md files